Updated: Swagger and TestCases for Collaborator and Done Some Modifications
