# app/Http/Controllers/CollaboratorController.php
@@ -7,6 +7,7 @@ use App\Mail\Mailer;
 use App\Models\Collaborator;
 use App\Models\Note;
 use App\Models\User;
+use App\Notifications\MailToCollab;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 use Tymon\JWTAuth\Facades\JWTAuth;
@@ -20,6 +21,32 @@ use Tymon\JWTAuth\Exceptions\JWTException;
 class CollaboratorController extends Controller
 {
     /**
+     * @OA\Post(
+     *   path="/api/addCollaborator",
+     *   summary="Add Colaborator to a specific Note ",
+     *   description=" Add Colaborator a to specific Note ",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"email" , "note_id"},
+     *               @OA\Property(property="email", type="email"),
+     *               @OA\Property(property="note_id", type="integer")
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Collaborator Created Sucessfully"),
+     *   @OA\Response(response=202, description="Collab Not Added"),
+     *   @OA\Response(response=401, description="Invalid Authorization Token"),
+     *   @OA\Response(response=404, description="Not a Registered Email"),
+     *   @OA\Response(response=409, description="Collaborator Already Created"),
+     *   security = {
+     *      {"Bearer" : {}}
+     *   }
+     * )
+     * 
      * This function takes User access token and 
      * checks if it is authorised or not and 
      * takes note_id, email if those parameters are valid 
@@ -52,18 +79,23 @@ class CollaboratorController extends Controller
                     if ($user) {
                         //$collabUser = Collaborator::where('note_id', $request->note_id)->where('email', $request->email)->get();
                         $collabUser = Collaborator::getCollaborator($request->note_id, $request->email);
-                        if ($collabUser != '[]') {
+                        if ($collabUser) {
                             Log::info('Collaborator Already Created');
-                            throw new FundoNotesException('Collaborator Already Created', 401);
+                            throw new FundoNotesException('Collaborator Already Created', 409);
                         }
 
                         $collab = Collaborator::createCollaborator($request->note_id, $request->email, $currentUser->id);
+                        $collaborator = Note::select('id', 'title', 'description')->where('id', $request->note_id)->first();
                         if ($collab) {
-                            $mail = new Mailer();
-                            $mail->sendEmailToCollab($user, $note, $currentUser);
+
+                            $delay = now()->addSeconds(60);
+                            $user->notify((new MailTocollab($currentUser->email, $collaborator))->delay($delay));
+
+                            // $mail = new Mailer();
+                            // $mail->sendEmailToCollab($user, $note, $currentUser);
                             Log::info('Collaborator created Sucessfully');
                             return response()->json([
-                                'message' => 'Collaborator created Sucessfully'
+                                'message' => 'Collaborator Created Sucessfully'
                             ], 201);
                         }
                         Log::info('Collab Not Added');
@@ -85,6 +117,32 @@ class CollaboratorController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *   path="/api/updateNoteByCollaborator",
+     *   summary="Edit and Update the note by Colaborator",
+     *   description="Edit and Update the note by Colaborator",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"title" , "note_id" , "description"},
+     *               @OA\Property(property="note_id", type="integer"),
+     *               @OA\Property(property="title", type="string"),
+     *               @OA\Property(property="description", type="string")
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Note Updated Sucessfully"),
+     *   @OA\Response(response=200, description="Note Not Updated"),
+     *   @OA\Response(response=404, description="Collaborator Not Found"),
+     *   @OA\Response(response=401, description="Invalid Authorization Token"),
+     *   security = {
+     *      {"Bearer" : {}}
+     *   }
+     * )
+     * 
      * This function takes User access token of collaborator and
      * checks if it is authorised or not and 
      * takes note details, if these are valid and authorized user, 
@@ -106,7 +164,7 @@ class CollaboratorController extends Controller
             }
 
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $id = $request->only('id');
+            $id = $request->input('id');
             $email = $currentUser->email;
 
             if ($currentUser) {
@@ -114,11 +172,10 @@ class CollaboratorController extends Controller
                 if ($collabUser) {
                     $collaborator = Collaborator::getCollaborator($id, $email);
 
-                    if ($collaborator == '[]') {
+                    if (!$collaborator) {
                         Log::info('Collaborator Not Found');
                         throw new FundoNotesException('Collaborator Not Found', 404);
                     }
-
                     $notes = Note::getNotesByNoteIdandUserId($id, $collaborator->user_id);
                     if ($notes) {
                         $note = Note::updateCollaboratorNote($notes, $request);
@@ -147,6 +204,30 @@ class CollaboratorController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *   path="/api/removeCollaborator",
+     *   summary="Remove Colaborator from specific Note ",
+     *   description=" Remove Colaborator from specific Note ",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"email" , "note_id"},
+     *               @OA\Property(property="email", type="email"),
+     *               @OA\Property(property="note_id", type="integer")
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=200, description="Collaborator Deleted Sucessfully"),
+     *   @OA\Response(response=401, description="Invalid Authorization Token"),
+     *   @OA\Response(response=404, description="Collaborator Not Found"),
+     *   security = {
+     *      {"Bearer" : {}}
+     *   }
+     * )
+     * 
      * This function takes User access token  and 
      * checks if it is authorised or not and 
      * takes note_id and collabarator email, if these are valid and
@@ -166,13 +247,13 @@ class CollaboratorController extends Controller
                 return response()->json($validator->errors()->toJson(), 400);
             }
 
-            $id = $request->only('note_id');
-            $email =  $request->only('email');
+            $id = $request->input('note_id');
+            $email =  $request->input('email');
             $currentUser = JWTAuth::parseToken()->authenticate();
             if ($currentUser) {
                 $collaborator = Collaborator::getCollaborator($id, $email);
 
-                if ($collaborator == '[]') {
+                if (!$collaborator) {
                     Log::info('Collaborator Not Found');
                     throw new FundoNotesException('Collaborator Not Found', 404);
                 }
